--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,41 @@
+server.port = 1005
+
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=athTechCrm
+spring.datasource.username=sa
+spring.datasource.password=passw0rd
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
+# ===============================
+# = H2
+# ===============================
+## Enable the console. (default:= false)
+#spring.h2.console.enabled = true
+## Path at which the console will be available. (default:= /h2-console)
+#spring.h2.console.path = /h2-console
+#spring.datasource.url=jdbc:h2:mem:codehub_crm
+#spring.datasource.username=sa
+#spring.datasource.hikari.maximum-pool-size=30
+#spring.datasource.driver-class-name=org.h2.Driver
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = create
+#validate
+#update
+#create-drop
+
+
+spring.datasource.initialization-mode=always
+
+
+# Naming strategy
+spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+#logging levels
+# Logback supports ERROR, WARN, INFO, DEBUG, or TRACE
+logging.level.org.springframework=ERROR
+
 
