--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = update
 #validate
 #update
 #create-drop
