--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,21 @@
             <version>7.0.0.jre8</version>
         </dependency>
 
+        <!-- swagger dependencies -->
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
